<resources>
    <string name="app_name">Bannerlord Fan App</string>
    <string name="welcome">welcome</string>
    <string name="log_in">log_in</string>
    <string name="username">username</string>
    <string name="forget_your_password">forget_your_password</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="passwordV1">Password</string>
    <string name="mail_address">Mail Address</string>
    <string name="sign_up">SIGN UP</string>
    <string name="back">BACK</string>
    <string name="m_b_fan_club"><![CDATA[M&B Fan Club]]></string>
    <string name="log_in_V1">LOG IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="sign_up_to_see_updates_and_news_from_the_game_world">Sign up to see updates and news from the Great Kalradya world</string>
    <string name="textview">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newsV2">News</string>
    <string name="user_name_surname">USER NAME SURNAME</string>
    <string name="main">Main</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="OPEN">OPEN</string>
    <string name="CLOSE">CLOSE</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="add_post">Add Post</string>
    <string name="title">Title</string>
    <string name="choose_group">Choose group</string>
    <string name="spinner_title">Groups</string>
    <string name="date">Date</string>
    <string name="information">Information</string>
    <string name="create">Create</string>
    <string name="choose_image">Choose Image</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="groups_name">GROUPS NAME</string>
    <string name="update_profile">Update Profile</string>
    <string name="followed">FOLLOWED</string>
    <string name="_10">10</string>
</resources>