<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="50dp"
    tools:context=".Profile.ProfileUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/profile_update_photo"
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:scaleType="fitXY"
            android:background="@drawable/ic_launcher_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginVertical="50dp">

        <EditText
            android:id="@+id/profile_update_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:hint="@string/name" />


        <EditText
            android:id="@+id/profile_update_surname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:hint="@string/surname" />

        <EditText
            android:id="@+id/profile_update_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:hint="@string/mail_address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:gravity="center">

        <Button
            android:onClick="updateInfo"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/backGround_8"
            android:text="@string/update"/>
        <Button
            android:onClick="backBtnProfile"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/backGround_4"
            android:text="@string/back"/>

    </LinearLayout>

</LinearLayout>