<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Groups.GroupCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_groupsCrate_backBtn"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:text="@string/back"
            app:backgroundTint="@color/backGround_4" />

        <TextView
            android:id="@+id/fragment_groupsCreate_mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_groupsCreate_image"
            android:layout_width="196sp"
            android:layout_height="196sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_launcher_foreground"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/fragment_groupsCreate_imageChooseBtn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_image"
            app:backgroundTint="@color/backGround_3" />

        <EditText
            android:id="@+id/fragment_groupsCreate_Title"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/title"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/fragment_groupsCreate_Description"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/description"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/fragment_groupsCreate_createBtn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/create"
            app:backgroundTint="@color/backGround_8" />
    </LinearLayout>

</LinearLayout>