<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Fragments.FragmentAddPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menuItemsAddPost_new_post_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Create New Post"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/menuItemsAddPost_add_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_add_circle_outline_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menuItemsAddPost_imageView"
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:layout_marginVertical="10dp"
            android:background="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/menuItemsAddPost_imageView_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/backGround_8"
            android:text="@string/choose_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Text Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dp"
            android:text="@string/choose_group"
            android:textColor="@color/black" />

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/menuItemsAddPost_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/menuItemsAddPost_editText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/title"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/menuItemsAddPost_editText_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/information"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>