<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    tools:context=".Posts.NewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/news_activity_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/ic_launcher_foreground"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />


        <TextView
            android:id="@+id/news_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:textColor="@color/backGround_8"
            android:text="@string/title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/news_activity_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/name"
                android:textColor="@color/backGround_3"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/news_activity_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:gravity="right"
                android:textColor="@color/backGround_3"
                android:text="@string/date"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="25dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/news_activity_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/information"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>