<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/post_adapter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textColor="@color/backGround_8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/post_adapter_image"
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_foreground"
            android:scaleType="fitXY"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/post_adapter_interaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/backGround_3"
            android:textSize="12sp"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded,SmallSp" />

        <TextView
            android:id="@+id/post_adapter_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/information"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>