<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20sp"
    tools:context=".Fragments.FragmentProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        >

        <ImageView
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="56" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POSTS" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followed" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginVertical="25dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bottomNavBarActivity_profile_updateBtn"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/backGround_8"
            android:text="@string/update_profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/bottomNavBarActivity_profile_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

    </LinearLayout>

</LinearLayout>